# 2023CppBootCamp

./: LICENSE  README.md
Abutaleb/Filemanger_soroush/: CMakeLists.txt  Device.cpp  Device.h  Drive.cpp  Drive.h  File.h  Filemanger.cpp  Filemanger.h  main.cpp
Abutaleb/Filemanger_soroush_2/: CMakeLists.txt  Device.cpp  Device.h  Drive.cpp  Drive.h  Filemanger.cpp  Filemanger.h  Hdd.cpp  Hdd.h  Iplugable.cpp  Iplugable.h  Ssd.cpp  Ssd.h  main.cpp
Abutaleb/Filemanger_soroush_2/build-Filemanger_05-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Filemanger_05  build.ninja  cmake_install.cmake
Abutaleb/Filemanger_soroush_2/build-Filemanger_05-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-d9c08ab905d65149096d.json  cmakeFiles-v1-248a9379c9ef9cb48dd2.json  codemodel-v2-53b48d097f062218effc.json  directory-.-Debug-4324a978b50386d10544.json  index-2023-02-14T11-25-45-0653.json  index-2023-02-18T08-52-15-0690.json  target-Filemanger_05-Debug-7f4b1a9d58850fff6ab8.json  target-Filemanger_05-Debug-d7c16acc502732cf5dec.json
Abutaleb/Filemanger_soroush_2/build-Filemanger_05-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-68e6916995449da4c7da.json  directory-.-Debug-d7dcefc45937d48b2a73.json
Abutaleb/sharedptr_soroush/: CMakeLists.txt  Sharedptr.cpp  Sharedptr.h  main.cpp
Abutaleb/sharedptr_soroush/build-shared-ptr-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  shared-ptr
Abutaleb/sharedptr_soroush/build-shared-ptr-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-e7587c38fb6599f8d11e.json  codemodel-v2-a9435f86bcee360b6ca1.json  directory-.-Debug-0ac90a2b06dcba2d50a0.json
Abutaleb/sharedptr_soroush/build-shared-ptr-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-82bf23d10f754380d59c.json  index-2023-02-02T10-21-14-0789.json  target-shared-ptr-Debug-fec933e0e18605fcc6d7.json
Abutaleb/sharedptr_soroush_2/: CMakeLists.txt  main.cpp  shared_ptr.h
Abutaleb/sharedptr_soroush_2/build-Shared_ptr2-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Shared_ptr2  build.ninja  cmake_install.cmake
Abutaleb/sharedptr_soroush_2/build-Shared_ptr2-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Abutaleb/sharedptr_soroush_2/build-sharedptr_soroush_2-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Shared_ptr2  build.ninja  cmake_install.cmake  qtcsettings.cmake
Abutaleb/sharedptr_soroush_2/build-sharedptr_soroush_2-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Asghari/Template/TemplateSharedPointer/: CMakeLists.txt  TemplateSharedPointer.h  main.cpp
Asghari/shared-pointer/: CMakeLists.txt  SharedPointer.cpp  SharedPointer.h  main.cpp
Asgharian/Dynamic_pointer_/: CMakeLists.txt  Dynamicptr.cpp  Dynamicptr.h  main.cpp
Asgharian/ThreadSafe_dynptr/: CMakeLists.txt  Dynamicptr.h  main.cpp
Asgharian/template_dynamic_ptr/: Dynamicptr.cpp  Dynamicptr.h  main.cpp
GhasemiPour/03_template_sharedptr/: shared_ptr.h
GhasemiPour/2_sharedptr/: sharedptr.cpp  sharedptr.h
Heidari/1/: CMakeLists.txt  main.cpp
Heidari/1/include/: DiskType.h  IDrive.h  fileclass.h  filemanager.h  hddinternal.h  idrivewrapper.h
Heidari/1/src/: fileclass.cpp  filemanager.cpp  hddinternal.cpp  idrivewrapper.cpp
Heidari/2/: CMakeLists.txt  Intsharedptr.cpp  Intsharedptr.h  main.cpp
Heidari/2/NaSharedPtr/: CMakeLists.txt  intshareptr.cpp  intshareptr.h  main.cpp
Heidari/2/build-NaSharedPtr-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  Makefile  NaSharedPtr  cmake_install.cmake  qtcsettings.cmake
Heidari/3/TemplateSharePtr/: CMakeLists.txt  TSharePtr.h  main.cpp
Heidari/3/build-TemplateSharePtr-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  Makefile  TemplateSharePtr  cmake_install.cmake
Heidari/4/TemplateSharePtr/: TSharePtr.h
Heidari/4/ThreadSafeSharedPtr/: CMakeLists.txt  TSafeSharePtr.cpp  TSafeSharePtr.h  main.cpp
Heidari/4/build-ThreadSafeSharedPtr-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  Makefile  ThreadSafeSharedPtr  cmake_install.cmake
Jafari/Ex1/OOPEx1/: CMakeLists.txt  CoolDisk.cpp  Flash.cpp  HDDex.cpp  InterfaceDevice.cpp  main.cpp
Jafari/Ex1/OOPEx1/includes/: CoolDisk.h  Flash.h  HDDex.h  InterfaceDevice.h
Jafari/Ex2/sharedPtrEx2/: CMakeLists.txt  MySharedPtr.cpp  MySharedPtr.h  main.cpp
Kordloo/FileManeger/: CMakeLists.txt  Cd.cpp  Cd.h  Divice.cpp  Divice.h  ExternalHdd.cpp  ExternalHdd.h  FelashMemory.cpp  FelashMemory.h  File.cpp  File.h  Filemaneger.cpp  Filemaneger.h  Hdd.cpp  Hdd.h  main.cpp
Kordloo/sh_classtemplate/: CMakeLists.txt  Shared_Ptr.h  main.cpp
Kordloo/share_ptr/: CMakeLists.txt  main.cpp  resourc.cpp  resourc.h  sh_ptr.cpp  sh_ptr.h
Maleki/01_FileManager/: CMakeLists.txt  MessageAndErrors.h  StorageCreator.h  cdrom.cpp  cdrom.h  file.cpp  file.h  filemanager.cpp  filemanager.h  flashmemory.cpp  flashmemory.h  main.cpp  storage.cpp  storage.h  storages.cpp  storages.h
Maleki/01_FileManager/help_commands/: New Microsoft Word Document.docx
Maleki/02_shared_pointer/: CMakeLists.txt  main.cpp  smartpointer.cpp  smartpointer.h
Maleki/03_shared_pointer_template/: CMakeLists.txt  main.cpp  smartpointer.h
Maleki/03_shared_pointer_threadSafe/: main.cpp  smartpointer.h
Mohammadi/: homeWork2(peremitive code)
Nazerian/02_shared_ptr_int/: CMakeLists.txt  main.cpp  shared_ptr_int.cpp  shared_ptr_int.h
Nazerian/03_template_shared_ptr/: CMakeLists.txt  main.cpp  shared_ptr.cpp  shared_ptr.h
Zamani/: file_manager.h
Zamani/HW-1/: device.cc  device.h  file.cc  file.h  file_manager.cc  main.cpp
Zamani/HW-2/: main.cpp
Zamani/HW-3/: main.cpp
ZandVakili/01 File Manager/: CD.cpp  CD.h  Device.cpp  Device.h  File.cpp  File.h  HDD.cpp  HDD.h  Main.cpp  TextFile.cpp  TextFile.h
ZandVakili/02 Shared Pointer/: Main.cpp  ReferenceCounter.cpp  ReferenceCounter.h  SharedPointer.h
(+36 files in other folders)
